<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="204dp"
        android:layout_height="159dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/if_advantage_nearby_1034361_88844" />

    <TextView
        android:id="@+id/tvUsuario"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/tvusuario"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />

    <EditText
        android:id="@+id/etUsuario"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsuario"
        app:strokeColor="#DD4A3737" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/tvpassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <EditText
        android:id="@+id/etPassword"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:strokeColor="#DD4A3737"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnInicio"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:text="@string/btnInicio"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.133"
        app:strokeColor="#DD4A3737" />

    <Button
        android:id="@+id/btnRegistro"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/btnRegistro"
        android:textSize="11sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>