<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/if_advantage_nearby_1034361_88844"
        android:alpha="0.4"/>

    <Button
        android:id="@+id/btnRefCata"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:backgroundTint="#DDBE88E6"
        android:layout_marginTop="48dp"
        android:text="@string/refcata"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRefCata"
        app:strokeColor="#DD7923B8" />

    <Button
        android:id="@+id/btnPorCoor"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:backgroundTint="#DDBE88E6"
        android:layout_marginTop="40dp"
        android:text="@string/Coor"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRefCata"
        app:strokeColor="#DD7923B8" />

    <Button
        android:id="@+id/btnMisParcelas"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:backgroundTint="#DDBE88E6"
        android:layout_marginTop="44dp"
        android:text="@string/Parcelas"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPorCoor"
        app:strokeColor="#DD7923B8" />

    <EditText
        android:id="@+id/etRefCata"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="44dp"
        android:hint="@string/Introduzca"
        android:inputType="text"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenida"
        app:strokeColor="#DD4A3737" />

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="388dp"
        android:layout_height="81dp"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/Bienvenida"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>